--- a/HabitFormer/app/src/main/res/values/strings.xml
+++ b/HabitFormer/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">HabitFormer</string>
     <string name="action_settings">Settings</string>
+    <string name="plus_button">+</string>
+    <string name="title_activity_habit">Create Habit</string>
+
 </resources>
