--- a/HabitFormer/app/src/main/res/values/strings.xml
+++ b/HabitFormer/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">HabitFormer</string>
     <string name="action_settings">Settings</string>
     <string name="plus_button">+</string>
-    <string name="title_activity_habit">Create Habit</string>
-
+    <string name="title_activity_habit">Create a new habit</string>
+    <string name="create_habit">Create Habit</string>
+    <string name="a_habit_name_here">Enter in a habit</string>
+    <string name="habit_name"></string>
 </resources>
