--- a/HabitFormer/app/src/main/res/values/strings.xml
+++ b/HabitFormer/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="create_habit">Create Habit</string>
     <string name="a_habit_name_here">Enter in a habit</string>
     <string name="habit_name"></string>
+    <string name="title_activity_display_habit">DisplayHabit</string>
+    <string name="start_button">Start!</string>
 </resources>
