--- a/HabitFormer/app/src/main/res/values/strings.xml
+++ b/HabitFormer/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="habit_name"></string>
     <string name="title_activity_display_habit">DisplayHabit</string>
     <string name="start_button">Start!</string>
+    <string name="title_activity_habit_timer">HabitTimer</string>
+    <string name="title_activity_configure_time">ConfigureTime</string>
+    <string name="more_time">More Time</string>
+    <string name="perfect_time">Perfect Time</string>
+    <string name="less_time">Less Time</string>
+    <string name="configure_time_text"></string>
+    <string name="edit_button">Edit Habit</string>
 </resources>
