Refactored naming for creating a habit

--- a/HabitFormer/app/src/main/res/values/strings.xml
+++ b/HabitFormer/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
     <string name="introduction_part_three"><![CDATA[Following Through So, how can you use the principles of habit-based coaching to get in shape yourself? Or to help friends, family or clients? Here are a few examples: Start small. First, when it comes to making any kind of lifestyle change, it’s best to start small and build. Begin by choosing one practice to follow. It could be drinking 8 cups of water each day. Sleeping 8 hours each night. Or exercise 30 minutes each day. Just be sure to choose only one and follow it for 2 weeks before adding any new habits.
     Make things clear and measurable. Next, make sure the practice is clear and measurable. “Eat more veggies” isn’t that useful. “Eat 1 fist-sized portion of vegetables with each meal” is much better. At the end of each day you can know for sure if you did it or not.
     Gain confidence first. Finally, make the practice something you (or your client) feels confident they can do every day. Even if the habit sounds small, if it’s not something that inspires confidence, it’s not a great practice to begin with.]]></string>
+    <string name="title_activity_create_the_habit">CreateTheHabit</string>
 
 </resources>
